src/objects/TR1__TimeType__c.object
<CustomObject>
    <fields>
        <fullName>TR1__EntryType__c</fullName>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Start &amp; Finish</fullName>
                </value>
                <value>
                    <fullName>Hours &amp; Minutes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Mileage__c</fullName>
        <description>To enter the rate of each mile.</description>
        <inlineHelpText>Enter the current rate of a mile</inlineHelpText>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__ShowAs__c</fullName>
        <label>Show As</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Show_in_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show_in_Community?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Time_Code__c</fullName>
        <label>Time Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Time Type</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entry Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Types</pluralLabel>
    <recordTypes>
        <fullName>TR1__Expense_Time_Type</fullName>
        <active>true</active>
        <description>W-009471 Create New Record Type to Separate Expense and Timesheet Time Types</description>
        <label>Expense Time Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Timesheet_Time_Type</fullName>
        <active>true</active>
        <description>W-009471 Create New Record Type to Separate Expense and Timesheet Time Types</description>
        <label>Timesheet Time Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>